deploy: a0751804a5ba78830576520fcfddc81dc11cd15e

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <link rel="canonical" href="https://jimmiemunyi.github.io/blog/" />
 <meta property="og:url" content="https://jimmiemunyi.github.io/blog/" />
 <meta property="og:site_name" content="Jimmie Munyi" />
-<meta property="og:image" content="https://jimmiemunyi.github.io/blog/images/logo.png" />
+<meta property="og:image" content="https://jimmiemunyi.github.io/blog/images/jim.jpg" />
 <script type="application/ld+json">
-{"headline":"Jimmie Munyi","description":"Technical Blog by Jimmie Munyi","image":"https://jimmiemunyi.github.io/blog/images/logo.png","@type":"WebSite","url":"https://jimmiemunyi.github.io/blog/","name":"Jimmie Munyi","@context":"https://schema.org"}</script>
+{"headline":"Jimmie Munyi","description":"Technical Blog by Jimmie Munyi","image":"https://jimmiemunyi.github.io/blog/images/jim.jpg","@type":"WebSite","url":"https://jimmiemunyi.github.io/blog/","name":"Jimmie Munyi","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://jimmiemunyi.github.io/blog/feed.xml" title="Jimmie Munyi" /><link rel="shortcut icon" type="image/x-icon" href="/blog/images/favicon.ico"><!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>Jimmie Munyi | Technical Blog by Jimmie Munyi</title>
@@ -27,9 +27,9 @@
 <link rel="canonical" href="https://jimmiemunyi.github.io/blog/" />
 <meta property="og:url" content="https://jimmiemunyi.github.io/blog/" />
 <meta property="og:site_name" content="Jimmie Munyi" />
-<meta property="og:image" content="https://jimmiemunyi.github.io/blog/images/logo.png" />
+<meta property="og:image" content="https://jimmiemunyi.github.io/blog/images/jim.jpg" />
 <script type="application/ld+json">
-{"headline":"Jimmie Munyi","description":"Technical Blog by Jimmie Munyi","image":"https://jimmiemunyi.github.io/blog/images/logo.png","@type":"WebSite","url":"https://jimmiemunyi.github.io/blog/","name":"Jimmie Munyi","@context":"https://schema.org"}</script>
+{"headline":"Jimmie Munyi","description":"Technical Blog by Jimmie Munyi","image":"https://jimmiemunyi.github.io/blog/images/jim.jpg","@type":"WebSite","url":"https://jimmiemunyi.github.io/blog/","name":"Jimmie Munyi","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
@@ -82,13 +82,8 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
-
-<p><img src="/blog/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
-
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
-
-<p>You can edit the <code class="highlighter-rouge">index.html</code> file to change this content.</p>
+        <div class="home"><p>Welcome to my Technical Blog. I will be posting everything I learn from my journey into ML and DL. Enjoy
+Checkout my <a href="https://github.com/jimmiemunyi">GitHub</a>.</p>
 
 <h1 id="posts">Posts</h1>
 
