deploy: dfbb0b90aa2cd0eb487e6345b5cd777da8c905d6

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
-<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css"><link type="application/atom+xml" rel="alternate" href="https://jimmiemunyi.github.io/blog/feed.xml" title="Jimmie Munyi" /><script src="https://hypothes.is/embed.js" async></script>
+<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css"><link type="application/atom+xml" rel="alternate" href="https://jimmiemunyi.github.io/blog/feed.xml" title="Jimmie Munyi" />
 
 <script>
 function wrap_img(fn) {
