deploy: 9d15b2eeb5965bb111d77e9c7248a888cff517d6

--- a/index.html
+++ b/index.html
@@ -142,7 +142,6 @@ Checkout my <a href="https://github.com/jimmiemunyi">GitHub</a>.</p>
   <data class="u-url" href="/blog/"></data>
 
   <div class="wrapper">
-
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
@@ -154,7 +153,12 @@ Checkout my <a href="https://github.com/jimmiemunyi">GitHub</a>.</p>
         </p>
       </div>
       <div class="footer-col">
-        <p>Technical Blog.</p>
+        <p>
+          <a href="https://www.buymeacoffee.com/jimmiemunyi" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/default-blue.png" alt="Buy Me A Coffee" width="200px"></a>
+        </p>
+        <p>
+          Built using <a href="https://github.com/fastai/fastpages"><img src="/blog/images/favicon.ico">fastpages</a>
+       </p>
       </div>
     </div>
 
