--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ Checkout my <a href="https://github.com/jimmiemunyi">GitHub</a>.</p>
           <a href="https://www.buymeacoffee.com/jimmiemunyi" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/default-blue.png" alt="Buy Me A Coffee" width="200px"></a>
         </p>
         <p>
-          Built using <a href="https://github.com/fastai/fastpages"><img src="/blog/images/favicon.ico">fastpages</a>
+          Built using <a href="https://github.com/fastai/fastpages"><img src="/blog/images/logo.png">fastpages</a>
        </p>
       </div>
     </div>
