deploy: b84c4b2be3dc65de73e61da861943101a57bca3f

--- a/404.html
+++ b/404.html
@@ -138,7 +138,7 @@ window.onload = wrap_img;
           <a href="https://www.buymeacoffee.com/jimmiemunyi" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/default-blue.png" alt="Buy Me A Coffee" width="200px"></a>
         </p>
         <p>
-          Built using <a href="https://github.com/fastai/fastpages"><img src="/blog/images/logo.png">fastpages</a>
+          Built using <a href="https://github.com/fastai/fastpages"><img src="/blog/images/fastai.png">fastpages</a>
        </p>
       </div>
     </div>
