--- a/index.html
+++ b/index.html
@@ -100,10 +100,7 @@ window.onload = wrap_img;
   </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>Welcome to my Technical Blog. I will be posting everything I learn from my journey into ML and DL. Enjoy
-Checkout my <a href="https://github.com/jimmiemunyi">GitHub</a>.</p>
-
-<h1 id="posts">Posts</h1>
+        <div class="home"><h1 id="posts">Posts</h1>
 
 
 
