--- a/index.html
+++ b/index.html
@@ -6,3 +6,8 @@ image: images/jim.jpg
 
 
 # Posts
+
+
+# Deep Learning Experiments
+
+Check out experiments I carry out as I learn about Deep Learning here: [Github Link](https://github.com/jimmiemunyi/deeplearning-experiments)
