--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:site_name" content="Jimmie Munyi" />
 <meta property="og:image" content="https://jimmiemunyi.github.io/blog/images/jim.jpg" />
 <script type="application/ld+json">
-{"description":"Technical Blog.","@type":"WebSite","headline":"Jimmie Munyi","url":"https://jimmiemunyi.github.io/blog/","name":"Jimmie Munyi","image":"https://jimmiemunyi.github.io/blog/images/jim.jpg","@context":"https://schema.org"}</script>
+{"description":"Technical Blog.","headline":"Jimmie Munyi","@type":"WebSite","image":"https://jimmiemunyi.github.io/blog/images/jim.jpg","url":"https://jimmiemunyi.github.io/blog/","name":"Jimmie Munyi","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://jimmiemunyi.github.io/blog/feed.xml" title="Jimmie Munyi" /><link rel="shortcut icon" type="image/x-icon" href="/blog/images/favicon.ico"><!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>Jimmie Munyi | Technical Blog.</title>
@@ -29,7 +29,7 @@
 <meta property="og:site_name" content="Jimmie Munyi" />
 <meta property="og:image" content="https://jimmiemunyi.github.io/blog/images/jim.jpg" />
 <script type="application/ld+json">
-{"description":"Technical Blog.","@type":"WebSite","headline":"Jimmie Munyi","url":"https://jimmiemunyi.github.io/blog/","name":"Jimmie Munyi","image":"https://jimmiemunyi.github.io/blog/images/jim.jpg","@context":"https://schema.org"}</script>
+{"description":"Technical Blog.","headline":"Jimmie Munyi","@type":"WebSite","image":"https://jimmiemunyi.github.io/blog/images/jim.jpg","url":"https://jimmiemunyi.github.io/blog/","name":"Jimmie Munyi","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
@@ -101,6 +101,10 @@ window.onload = wrap_img;
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home"><h1 id="posts">Posts</h1>
+
+<h1 id="deep-learning-experiments">Deep Learning Experiments</h1>
+
+<p>Check out experiments I carry out as I learn about Deep Learning here: <a href="https://github.com/jimmiemunyi/deeplearning-experiments">Github Link</a></p>
 
 
 
