--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@ image: images/jim.jpg
 ---
 
 
-# Posts
-
-
 # Deep Learning Experiments
 
-Check out experiments I carry out as I learn about Deep Learning here: [Github Link](https://github.com/jimmiemunyi/deeplearning-experiments)
+<p>Check out experiments I carry out as I learn about Deep Learning here: <a href="https://github.com/jimmiemunyi/deeplearning-experiments"> Github Link </a></p>
+
+
+# Posts
+
