deploy: b9582dfcabb659262536192aa8774ca926a7eaae

--- a/index.html
+++ b/index.html
@@ -100,11 +100,12 @@ window.onload = wrap_img;
   </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h1 id="posts">Posts</h1>
+        <div class="home"><h1 id="deep-learning-experiments">Deep Learning Experiments</h1>
 
-<h1 id="deep-learning-experiments">Deep Learning Experiments</h1>
+<p>Check out experiments I carry out as I learn about Deep Learning here: <a href="https://github.com/jimmiemunyi/deeplearning-experiments"> Github Link </a></p>
 
-<p>Check out experiments I carry out as I learn about Deep Learning here: <a href="https://github.com/jimmiemunyi/deeplearning-experiments">Github Link</a></p>
+<h1 id="posts">Posts</h1>
+
 
 
 
