--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@ image: images/jim.jpg
 
 # Deep Learning Experiments
 
-<p>Check out experiments I carry out as I learn about Deep Learning here: <a href="https://github.com/jimmiemunyi/deeplearning-experiments"> Github Link </a></p>
+<p>Check out experiments I carry out as I learn about Deep Learning here: <a href="https://github.com/jimmiemunyi/deeplearning-experiments"> Deep Learning Experiments</a></p>
+
+
+<hr>
 
 
 # Posts
