deploy: 3ef36c81d42ebdee3394b1d83dfdbadd72aa3647

--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><h1 id="deep-learning-experiments">Deep Learning Experiments</h1>
 
-<p>Check out experiments I carry out as I learn about Deep Learning here: <a href="https://github.com/jimmiemunyi/deeplearning-experiments"> Github Link </a></p>
+<p>Check out experiments I carry out as I learn about Deep Learning here: <a href="https://github.com/jimmiemunyi/deeplearning-experiments"> Deep Learning Experiments</a></p>
+
+<hr />
 
 <h1 id="posts">Posts</h1>
 
