deploy: 919964df6d91fc9e26bffb065b7861a620c63de5

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:site_name" content="Jimmie Munyi" />
 <meta property="og:image" content="https://jimmiemunyi.github.io/blog/images/jim.jpg" />
 <script type="application/ld+json">
-{"headline":"Jimmie Munyi","description":"Technical Blog.","image":"https://jimmiemunyi.github.io/blog/images/jim.jpg","@type":"WebSite","url":"https://jimmiemunyi.github.io/blog/","name":"Jimmie Munyi","@context":"https://schema.org"}</script>
+{"image":"https://jimmiemunyi.github.io/blog/images/jim.jpg","description":"Technical Blog.","@type":"WebSite","url":"https://jimmiemunyi.github.io/blog/","name":"Jimmie Munyi","headline":"Jimmie Munyi","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://jimmiemunyi.github.io/blog/feed.xml" title="Jimmie Munyi" /><link rel="shortcut icon" type="image/x-icon" href="/blog/images/favicon.ico"><!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>Jimmie Munyi | Technical Blog.</title>
@@ -29,7 +29,7 @@
 <meta property="og:site_name" content="Jimmie Munyi" />
 <meta property="og:image" content="https://jimmiemunyi.github.io/blog/images/jim.jpg" />
 <script type="application/ld+json">
-{"headline":"Jimmie Munyi","description":"Technical Blog.","image":"https://jimmiemunyi.github.io/blog/images/jim.jpg","@type":"WebSite","url":"https://jimmiemunyi.github.io/blog/","name":"Jimmie Munyi","@context":"https://schema.org"}</script>
+{"image":"https://jimmiemunyi.github.io/blog/images/jim.jpg","description":"Technical Blog.","@type":"WebSite","url":"https://jimmiemunyi.github.io/blog/","name":"Jimmie Munyi","headline":"Jimmie Munyi","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
