--- a/projects/index.html
+++ b/projects/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://jimmiemunyi.github.io/blog/projects/" />
 <meta property="og:site_name" content="Jimmie Munyi" />
 <script type="application/ld+json">
-{"headline":"Projects","description":"Technical Blog.","@type":"WebPage","url":"https://jimmiemunyi.github.io/blog/projects/","@context":"https://schema.org"}</script>
+{"description":"Technical Blog.","@type":"WebPage","url":"https://jimmiemunyi.github.io/blog/projects/","headline":"Projects","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://jimmiemunyi.github.io/blog/feed.xml" title="Jimmie Munyi" /><link rel="shortcut icon" type="image/x-icon" href="/blog/images/favicon.ico"><!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>Projects | Jimmie Munyi</title>
@@ -27,7 +27,7 @@
 <meta property="og:url" content="https://jimmiemunyi.github.io/blog/projects/" />
 <meta property="og:site_name" content="Jimmie Munyi" />
 <script type="application/ld+json">
-{"headline":"Projects","description":"Technical Blog.","@type":"WebPage","url":"https://jimmiemunyi.github.io/blog/projects/","@context":"https://schema.org"}</script>
+{"description":"Technical Blog.","@type":"WebPage","url":"https://jimmiemunyi.github.io/blog/projects/","headline":"Projects","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
