--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://jimmiemunyi.github.io/blog/404.html" />
 <meta property="og:site_name" content="Jimmie Munyi" />
 <script type="application/ld+json">
-{"description":"Technical Blog.","@type":"WebPage","url":"https://jimmiemunyi.github.io/blog/404.html","headline":"Jimmie Munyi","@context":"https://schema.org"}</script>
+{"headline":"Jimmie Munyi","description":"Technical Blog.","@type":"WebPage","url":"https://jimmiemunyi.github.io/blog/404.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://jimmiemunyi.github.io/blog/feed.xml" title="Jimmie Munyi" /><link rel="shortcut icon" type="image/x-icon" href="/blog/images/favicon.ico"><!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>Jimmie Munyi | Technical Blog.</title>
@@ -27,7 +27,7 @@
 <meta property="og:url" content="https://jimmiemunyi.github.io/blog/404.html" />
 <meta property="og:site_name" content="Jimmie Munyi" />
 <script type="application/ld+json">
-{"description":"Technical Blog.","@type":"WebPage","url":"https://jimmiemunyi.github.io/blog/404.html","headline":"Jimmie Munyi","@context":"https://schema.org"}</script>
+{"headline":"Jimmie Munyi","description":"Technical Blog.","@type":"WebPage","url":"https://jimmiemunyi.github.io/blog/404.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
